<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/zf_menu_titlebar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/hui" />

    <include layout="@layout/line_horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="15dp" >

            <LinearLayout
                android:id="@+id/ll_head_img_personalinfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingRight="15dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/usericon"
                    android:textSize="@dimen/commonly28" />

                <com.hc.core.view.CircularImage
                    android:id="@+id/head_img_personalinfo"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:src="@drawable/portrait_2"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_arrow_2" />
            </LinearLayout>

            <include layout="@layout/line_horizontal" />

            <LinearLayout
                android:id="@+id/user_name_ll_personalinfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingRight="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/username"
                    android:textSize="@dimen/commonly28" />

                <TextView
                    android:id="@+id/user_name_txt_personalinfo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:singleLine="true"
                    android:textSize="@dimen/commonly_desc24" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/icon_arrow_2" />
            </LinearLayout>

            <include layout="@layout/line_horizontal" />

            <LinearLayout
                android:id="@+id/sex_ll_personalinfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingRight="15dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/usersex"
                    android:textSize="@dimen/commonly28" />

                <TextView
                    android:id="@+id/sex_txt_personalinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/commonly_desc24" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_arrow_2" />
            </LinearLayout>

            <include layout="@layout/line_horizontal" />

            <LinearLayout
                android:id="@+id/phone_ll_personalinfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingRight="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/userphone"
                    android:textSize="@dimen/commonly28" />

                <TextView
                    android:id="@+id/phone_txt_personalinfo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:hint="绑定手机号"
                    android:textSize="@dimen/commonly_desc24" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_arrow_2" />
            </LinearLayout>

            <include layout="@layout/line_horizontal" />

            <LinearLayout
                android:id="@+id/weixin_ll_personalinfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingRight="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/userwechat"
                    android:textSize="@dimen/commonly28" />

                <TextView
                    android:id="@+id/weixin_txt_personalinfo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:hint="绑定微信账号"
                    android:singleLine="true"
                    android:textSize="@dimen/commonly_desc24" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_arrow_2" />
            </LinearLayout>

            <include layout="@layout/line_horizontal" />

            <LinearLayout
                android:id="@+id/qq_ll_personalinfo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingRight="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/userqq"
                    android:textSize="@dimen/commonly28" />

                <TextView
                    android:id="@+id/qq_txt_personalinfo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical|right"
                    android:hint="绑定QQ账号"
                    android:singleLine="true"
                    android:textSize="@dimen/commonly_desc24" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="12dp"
                    android:src="@drawable/icon_arrow_2" />
            </LinearLayout>

            <include layout="@layout/line_horizontal" />

            <RelativeLayout
                android:id="@+id/login_btu_r"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="25dp" >

                <Button
                    android:id="@+id/next_btu"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_hl"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="确认"
                    android:textColor="@color/white"
                    android:textSize="@dimen/pcenter_text_01" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>